--- a/vortrag/style.css
+++ b/vortrag/style.css
@@ -16,6 +16,11 @@
     align-items: center;
 }
 
+.twoway-inner {
+    width: 75%;
+    height: 90%;
+}
+
 .fourway {
     width: 50%;
     height: 45%;
@@ -23,4 +28,58 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: blue;
 }
+
+.fourway-inner {
+    width: 75%;
+    height: 90%;
+    justify-content: center;
+    align-items: center;
+    background: green;
+}
+
+.outer {
+    /* background:blue; */
+    display:flex;
+    flex-flow: row wrap;
+    width:100%;
+    height:90%;
+    /* margin-top:1%; */
+    /* margin-bottom: 25%; */
+    /* float:left; */
+    /* margin-top: auto;
+    margin-bottom: auto; */
+    /* position: relative; */
+    /* justify-content: center;
+    align-items: center;   */
+}
+
+.inner {
+    /* background:green; */
+    width:50%;
+    /* height:90%; */
+    /* display: inline; */
+    /* float: none; */
+    display:flex;
+    justify-content: center;
+    align-items: center;  
+    /* float: left; */
+    /* height:50%; */
+    /* box-sizing: border-box; */
+    /* float: left;   */
+    /* justify-content: center;
+    align-items: center; */
+    /* text-align: center; */
+    /* padding: 24px; */
+    /* margin-bottom: 1%; */
+}
+
+/* .inner div {
+    width: 100%;
+    height: 100%;
+    display:flex;
+    float: none;
+    justify-content: center;
+    align-items: center;  
+} */
