--- a/vortrag/style.css
+++ b/vortrag/style.css
@@ -1,4 +1,4 @@
-.twoway-left {
+/* .twoway-left {
     float: left;
     width: 50%;
     height: 90%;
@@ -37,7 +37,7 @@
     justify-content: center;
     align-items: center;
     background: green;
-}
+} */
 
 .outer {
     /* background:blue; */
@@ -73,6 +73,11 @@
     /* text-align: center; */
     /* padding: 24px; */
     /* margin-bottom: 1%; */
+}
+
+.inner2 {
+    width: 70%;
+    /* height: 75%; */
 }
 
 /* .inner div {
